--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="member-info"><h4>Nguyễn Văn A</h4><span>Chủ tịch sáng lập</span></div>
                         </div>
                         <div class="team-member hover-target">
-                            <div class="member-img"><img src="https://images.unsplash.com/photo-1573496359-7013ac2bebb5?q=80&w=400&auto=format&fit=crop" alt="Director" loading="lazy"><div class="social-overlay"><a href="#"><i class="fab fa-linkedin"></i></a></div></div>
+                            <div class="member-img"><img src="https://media.istockphoto.com/id/2181713446/vi/anh/ch%C3%A2n-dung-phong-c%C3%A1ch-c%E1%BB%A7a-ng%C6%B0%E1%BB%9Di-ph%E1%BB%A5-n%E1%BB%AF-tr%E1%BA%BB-trong-%C3%A1o-len-ch%E1%BB%A5p-tr%C3%AAn-n%E1%BB%81n-x%C3%A1m.jpg?s=2048x2048&w=is&k=20&c=Fq3AJnbtYF8DJISaVtkkHtO_JzuXZVKJaOSHftFZlWM=" alt="Director" loading="lazy"><div class="social-overlay"><a href="#"><i class="fab fa-linkedin"></i></a></div></div>
                             <div class="member-info"><h4>Trần Thị B</h4><span>Giám đốc điều hành</span></div>
                         </div>
                         <div class="team-member hover-target">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="card-3d item-3 hover-target" data-tilt>
-                    <img src="https://images.unsplash.com/photo-1594708767767-4f037890453c?q=80&w=1000&auto=format&fit=crop" class="card-img" alt="Food" loading="lazy">
+                    <img src="https://cafefcdn.com/203337114487263232/2023/1/12/photo-14-1673507533363427648414.jpg" class="card-img" alt="Food" loading="lazy">
                     <div class="card-content"><h3>Bữa Ăn 0đ</h3></div>
                 </div>
                 <div class="card-3d item-4 hover-target" data-tilt>
