--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <header>
         <nav>
-            <div class="logo">
+            <div class="logo" id="logo-link">
                 <img href="#" src="./images/Logo.png" alt="Little Roses Logo" class="logo-img"
                     onerror="this.style.display='none'">
                 <i href="#" class="fas fa-rose"></i> Little Roses
@@ -178,7 +178,7 @@
             <p class="section-subtitle reveal">Các dự án đang cần sự chung tay của cộng đồng</p>
             <div class="bento-grid">
                 <div class="card-3d item-1 hover-target" data-tilt>
-                    <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?q=80&w=1000&auto=format&fit=crop"
+                    <img src="https://ofnews.vn/stores/news_dataimages/anhvu/052019/31/11/2837_YYi_diYn_QuY_Toyota_trao_tYng_cac_phYn_qua_cho_cac_em_hYc_sinh.jpg"
                         class="card-img" alt="School" loading="lazy">
                     <div class="card-content">
                         <span
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="card-3d item-2 hover-target" data-tilt>
-                    <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?q=80&w=1000&auto=format&fit=crop"
+                    <img src="https://vtv.gov.vn/uploads/ketnoi/422/vtvnet/2023/thang-11/trai-tim-cho-em-3.jpg"
                         class="card-img" alt="Medical" loading="lazy">
                     <div class="card-content">
                         <span style="background: #e74c3c; padding: 5px 10px; border-radius: 4px; font-size: 0.8rem;">Y
@@ -203,14 +203,14 @@
                     </div>
                 </div>
                 <div class="card-3d item-3 hover-target" data-tilt>
-                    <img src="https://cafefcdn.com/203337114487263232/2023/1/12/photo-14-1673507533363427648414.jpg"
+                    <img src="https://cafebiz.cafebizcdn.vn/162123310254002176/2023/1/12/photo-1-1673443725338666300654-1673446626126-1673446626292119356559-1673498005415-16734980058361059814615.jpg"
                         class="card-img" alt="Food" loading="lazy">
                     <div class="card-content">
                         <h3>Bữa Ăn 0đ</h3>
                     </div>
                 </div>
                 <div class="card-3d item-4 hover-target" data-tilt>
-                    <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&w=1000&auto=format&fit=crop"
+                    <img src="https://images.baodantoc.vn/uploads/2021/Th%C3%A1ng_12/Ng%C3%A0y%203/TRUNG/T%E1%BA%B7ng%20qu%C3%A0/A1%20-%20OK.jpg"
                         class="card-img" alt="Scholarship" loading="lazy">
                     <div class="card-content">
                         <h3>Học Bổng</h3>
@@ -339,7 +339,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer id="contact">
         <div class="footer-wrapper">
             <div class="footer-grid">
                 <div class="footer-col brand-col">
