--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
-    <meta name="description"
-        content="Little Roses Foundation - Quỹ từ thiện phi lợi nhuận vì trẻ em Việt Nam. Minh bạch 100%, hỗ trợ giáo dục, y tế và bác ái xã hội.">
-    <meta name="theme-color" content="#C21E56">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Roses Foundation - Trao Yêu Thương</title>
 
     <!-- Resource Hints for Performance -->
@@ -95,11 +92,7 @@
             <div class="hero-visual reveal">
                 <div class="glass-card-hero" data-tilt data-tilt-glare data-tilt-max-glare="0.5">
                     <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?q=75&w=800&auto=format&fit=crop&fm=webp"
-                        srcset="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?q=60&w=400&auto=format&fit=crop&fm=webp 400w,
-                                https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?q=70&w=600&auto=format&fit=crop&fm=webp 600w,
-                                https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?q=75&w=800&auto=format&fit=crop&fm=webp 800w"
-                        sizes="(max-width: 768px) 100vw, 380px" alt="Charity" loading="eager" fetchpriority="high"
-                        width="380" height="400">
+                        alt="Charity" loading="eager" width="380" height="400">
                     <div class="hero-stats">
                         <div class="stat-box">
                             <h4>25+</h4>
@@ -150,10 +143,7 @@
                         <div class="team-member hover-target">
                             <div class="member-img"><img
                                     src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=70&w=400&auto=format&fit=crop&fm=webp"
-                                    srcset="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=60&w=300&auto=format&fit=crop&fm=webp 300w,
-                                            https://images.unsplash.com/photo-1560250097-0b93528c311a?q=70&w=400&auto=format&fit=crop&fm=webp 400w"
-                                    sizes="(max-width: 768px) 50vw, 400px" alt="Founder" loading="lazy" width="400"
-                                    height="400">
+                                    alt="Founder" loading="lazy" width="400" height="400">
                                 <div class="social-overlay"><a href="#"><i class="fab fa-linkedin"></i></a></div>
                             </div>
                             <div class="member-info">
